--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Mac crap
+*.codekit
+fonts/*
+/node_modules/
 .DS_Store
-
-# Sublime
-*.sublime-project
-*.sublime-workspace
-
-# PhpStorm
-.idea/
-
-# Eclipse
-*.pydevproject
-.project
-.metadata
+npm-debug.log
+includes/class-secrets.php
